--- a/index.html
+++ b/index.html
@@ -691,11 +691,11 @@
             const playerSkill = p.skills.find(ps => ps.id === s.id);
             const lv = playerSkill ? playerSkill.level : 0;
             const node = document.createElement('div');
-            node.className = skill-node ${lv > 0 ? 'learned' : ''};
+            node.className = `skill-node ${lv > 0 ? 'learned' : ''}`;
             node.innerHTML = `
                 <i class="fa-solid ${s.icon}" style="color: ${lv > 0 ? s.color : '#555'}"></i>
                 <div class="skill-name">${s.name}</div>
-                ${lv > 0 ? <span class="badge" style="background:var(--mana)">LV ${lv}</span> : '<span class="badge">BLOQUEADO</span>'}
+                ${lv > 0 ? `<span class="badge" style="background:var(--mana)">LV ${lv}</span>` : '<span class="badge">BLOQUEADO</span>'}
             `;
             node.onclick = () => openSkillDetail(s);
             container.appendChild(node);
@@ -722,7 +722,7 @@
             <p style="font-size: 14px; opacity: 0.9;">${skill.desc}</p>
             <div class="stat-badge"><i class="fa-solid fa-star"></i> REQUER PLAYER LV: ${reqLv}</div>
             <div class="stat-badge"><i class="fa-solid fa-droplet"></i> CUSTO MANA: ${skill.mana + (currentLv * 5)}</div>
-            ${isLocked ? <p style="color:var(--primary); font-size:12px;">Desbloqueia no nível ${reqLv}</p> : ''}
+            ${isLocked ? `<p style="color:var(--primary); font-size:12px;">Desbloqueia no nível ${reqLv}</p>` : ''}
         `;
 
         btn.onclick = () => learnSkill(skill, reqLv);
@@ -744,7 +744,7 @@
             updateUI();
             closeDetailModal();
             renderSkillTree();
-            typeLog(Habilidade ${skillData.name} atualizada!, "#54a0ff");
+            typeLog(`Habilidade ${skillData.name} atualizada!`, "#54a0ff");
             autoSave();
         }
     }
@@ -769,7 +769,7 @@
             p.gold -= item.cost; 
             p.inventory.push({...item});
             updateUI();
-            typeLog(Comprou ${item.name}!, "#2ed573");
+            typeLog(`Comprou ${item.name}!`, "#2ed573");
         } else {
             playSound('dmg');
             if(btn) btn.classList.add('error-blink');
@@ -786,7 +786,7 @@
         else if(item.type) p.buffs[item.type] = item.dur;
         p.inventory.splice(index, 1);
         updateUI();
-        await typeLog(Usou ${item.name}!, "#54a0ff");
+        await typeLog(`Usou ${item.name}!`, "#54a0ff");
     }
 
     async function useSkill(index) {
@@ -813,18 +813,18 @@
             dmg = Math.ceil(p.int * (1.2 + (pSkill.level * 0.4)));
             e.hp -= dmg;
             if(Math.random() < 0.3) e.burning = true;
-            await typeLog(BOLA DE FOGO LV${pSkill.level}: ${dmg} de dano!, color);
+            await typeLog(`BOLA DE FOGO LV${pSkill.level}: ${dmg} de dano!`, color);
         } 
         else if(pSkill.id === 'agua') {
             dmg = Math.ceil(p.int * (1.0 + (pSkill.level * 0.2)));
             e.hp -= dmg;
-            await typeLog(TEMPESTADE LV${pSkill.level}: ${dmg} de dano., color);
+            await typeLog(`TEMPESTADE LV${pSkill.level}: ${dmg} de dano.`, color);
         }
         else if(pSkill.id === 'terra') {
             dmg = 5 + (pSkill.level * 2);
             e.hp -= dmg;
             e.blinded = true; 
-            await typeLog(MURALHA LV${pSkill.level}: Inimigo cego e tomou ${dmg} de dano., color);
+            await typeLog(`MURALHA LV${pSkill.level}: Inimigo cego e tomou ${dmg} de dano.`, color);
         }
 
         applyDamageEffect();
@@ -866,27 +866,27 @@
             document.getElementById('enemy-max-hp').innerText = e.maxHp;
         }
 
-        document.getElementById('val-atk').innerText = ${Math.floor(p.str*0.7)}-${Math.ceil(p.str)} Dano;
-        document.getElementById('val-heal').innerText = 8 MP | +${Math.floor(p.int * 1.5)};
-        document.getElementById('val-rest').innerText = +${Math.floor(p.int/2)}-${p.int} MP;
+        document.getElementById('val-atk').innerText = `${Math.floor(p.str*0.7)}-${Math.ceil(p.str)} Dano`;
+        document.getElementById('val-heal').innerText = `8 MP | +${Math.floor(p.int * 1.5)}`;
+        document.getElementById('val-rest').innerText = `+${Math.floor(p.int/2)}-${p.int} MP`;
 
         for(let i=0; i<3; i++) {
-            const slot = document.getElementById(skill-slot-${i});
+            const slot = document.getElementById(`skill-slot-${i}`);
             if(p.skills[i]) {
                 const sData = skillList.find(s => s.id === p.skills[i].id);
                 slot.disabled = false;
-                slot.style.boxShadow = inset 0 -4px 0 0 ${sData.color};
-                slot.innerHTML = <i class="fa-solid ${sData.icon}"></i><div class="skill-info">LV ${p.skills[i].level}</div>;
+                slot.style.boxShadow = `inset 0 -4px 0 0 ${sData.color}`;
+                slot.innerHTML = `<i class="fa-solid ${sData.icon}"></i><div class="skill-info">LV ${p.skills[i].level}</div>`;
             } else {
                 slot.disabled = true;
-                slot.innerHTML = <i class="fa-solid fa-lock"></i>;
+                slot.innerHTML = `<i class="fa-solid fa-lock"></i>`;
             }
         }
 
         const slots = document.querySelectorAll('.slot');
         slots.forEach((s, i) => {
             if(p.inventory[i]) {
-                s.innerHTML = <i class="fa-solid ${p.inventory[i].icon}" style="color: #ffa502"></i>;
+                s.innerHTML = `<i class="fa-solid ${p.inventory[i].icon}" style="color: #ffa502"></i>`;
             } else { s.innerHTML = ""; }
         });
 
@@ -919,7 +919,7 @@
         e = { ...data, hp: finalHp, maxHp: finalHp, str: finalStr, blinded: false, burning: false };
         document.getElementById('enemy-img').src = e.img;
         updateUI();
-        await typeLog(${e.name} apareceu!, "#f1c40f");
+        await typeLog(`${e.name} apareceu!`, "#f1c40f");
         toggleButtons(false);
     }
 
@@ -937,7 +937,7 @@
         playSound('gold');
         let xpGanha = 25 + (p.lv * 10); let goldGanho = getRandom(5, 10);
         p.xp += xpGanha; p.gold += goldGanho;
-        await typeLog(VITÓRIA! +${xpGanha} XP | +${goldGanho} Gold, "#2ecc71");
+        await typeLog(`VITÓRIA! +${xpGanha} XP | +${goldGanho} Gold`, "#2ecc71");
         
         if(p.bleeding && Math.random() > 0.4) {
             p.bleeding = false;
@@ -981,7 +981,7 @@
         toggleButtons(true); isDefending = false;
         let dmg = Math.ceil(getRandom(p.str * 0.7, p.str));
         e.hp -= dmg; applyDamageEffect();
-        updateUI(); await typeLog(Você causou ${dmg} de dano!);
+        updateUI(); await typeLog(`Você causou ${dmg} de dano!`);
         if(e.hp <= 0) await win(); else await enemyTurn();
     }
 
@@ -989,7 +989,7 @@
         if(e.burning && e.hp > 0) {
             let burnDmg = Math.ceil(e.maxHp * 0.1);
             e.hp -= burnDmg;
-            await typeLog(Inimigo queimando: -${burnDmg} HP, "var(--skill-fogo)");
+            await typeLog(`Inimigo queimando: -${burnDmg} HP`, "var(--skill-fogo)");
             if(e.hp <= 0) { await win(); return; }
         }
 
@@ -997,19 +997,19 @@
             let bleedDmg = Math.ceil(p.maxHp * 0.05); 
             p.hp -= bleedDmg;
             playSound('dmg');
-            await typeLog(Você perde sangue: -${bleedDmg} HP, "#ff4757");
+            await typeLog(`Você perde sangue: -${bleedDmg} HP`, "#ff4757");
             updateUI();
         }
 
         if(e.blinded && Math.random() > 0.5) {
             e.blinded = false;
-            await typeLog(${e.name} errou o golpe!, "var(--skill-terra)");
+            await typeLog(`${e.name} errou o golpe!`, "var(--skill-terra)");
         } else {
             let dmg = Math.ceil(getRandom(e.str * 0.8, e.str));
             if(isDefending) dmg = Math.ceil(dmg * 0.5);
             p.hp -= dmg; p.furia = Math.min(100, p.furia + 20);
             playSound('dmg');
-            updateUI(); await typeLog(${e.name} atacou: -${dmg} HP, "#ff4757");
+            updateUI(); await typeLog(`${e.name} atacou: -${dmg} HP`, "#ff4757");
 
             if((e.name === "Esqueleto" || e.name === "Vampiro") && Math.random() < 0.3 && !p.bleeding) {
                 p.bleeding = true;
@@ -1035,7 +1035,7 @@
         toggleButtons(true); p.mana -= 8;
         let cura = Math.floor(p.int * 1.5); 
         p.hp = Math.min(p.maxHp, p.hp + cura);
-        updateUI(); typeLog(Curar: +${cura} HP).then(() => enemyTurn());
+        updateUI(); typeLog(`Curar: +${cura} HP`).then(() => enemyTurn());
     }
     function playerDefend() { 
         playSound('atk');
@@ -1053,7 +1053,7 @@
             typeLog("Você cuidou das feridas enquanto descansava.", "#2ed573");
         }
         
-        updateUI(); typeLog(Descansou: +${ganho} Mana).then(() => enemyTurn()); 
+        updateUI(); typeLog(`Descansou: +${ganho} Mana`).then(() => enemyTurn()); 
     }
 
     function useUltimate() { 
