--- a/index.html
+++ b/index.html
@@ -447,21 +447,21 @@
             <i class="fa-solid fa-flask-vial"></i> POÇÃO MP (12G)<div class="skill-info">+20 MANA</div>
         </button>
         <button class="action-btn btn-mag fogo shop-item-btn" onclick="buyItem('boots', this)">
-            <i class="fa-solid fa-boot"></i> BOTAS (25G)<div class="skill-info">+SPD (Ativo)</div>
+            <i class="fa-solid fa-boot"></i> BOTAS (15G)<div class="skill-info">+SPD (Ativo)</div>
         </button>
         <button class="action-btn btn-def shop-item-btn" onclick="buyItem('shield', this)">
-            <i class="fa-solid fa-shield-halved"></i> ESCUDO (30G)<div class="skill-info">-Dano (Ativo)</div>
+            <i class="fa-solid fa-shield-halved"></i> ESCUDO (21G)<div class="skill-info">-Dano (Ativo)</div>
         </button>
         <button class="action-btn btn-ult shop-item-btn" onclick="buyItem('coin', this)" style="grid-column: span 2;">
-            <i class="fa-solid fa-coins"></i> MOEDA DA SORTE (40G)<div class="skill-info">+Sorte (Ativo)</div>
+            <i class="fa-solid fa-coins"></i> MOEDA DA SORTE (33G)<div class="skill-info">+Sorte (Ativo)</div>
         </button>
     </div>
     <button class="action-btn btn-def" style="width: 100%; margin-top: 15px;" onclick="closeAllModals()">FECHAR</button>
 </div>
 <div id="death-modal">
-    <h2 style="color: var(--primary); margin-top: 0;">VOCÊ MORREU!</h2>
+    <h2 style="color: var(--primary); margin-top: 0;">Você conheceu a DERROTA!</h2>
     <p style="font-size: 0.9rem; opacity: 0.8; line-height: 1.4;">
-        Seu nível e atributos foram preservados,<br>mas seu <b>ouro, XP e itens</b> sumiram.
+        Seu conhecimento e atributos foram preservados,<br>mas seu <b>ouro, xp e itens</b> se perderam.
     </p>
     <button class="action-btn btn-heal" style="width: 100%; margin-bottom: 10px;" onclick="restartAfterDeath()">
         <i class="fa-solid fa-rotate-left"></i> TENTAR NOVAMENTE
@@ -477,23 +477,23 @@
             <h2 id="p-display-name">GUERREIRO</h2>
         </div>
         <div class="attribute-card">
-            <div class="attr-info" onclick="showStatValue('str')"><i class="fa-solid fa-hand-fist"></i> FORÇA NVL <span class="attr-value" id="stat-str">1</span></div>
+            <div class="attr-info" onclick="showStatValue('str')"><i class="fa-solid fa-hand-fist"></i> FORÇA NÍVEL <span class="attr-value" id="stat-str">1</span></div>
             <button class="lvl-up-btn" onclick="spendPoint('str')">+</button>
         </div>
         <div class="attribute-card">
-            <div class="attr-info" onclick="showStatValue('spd')"><i class="fa-solid fa-bolt"></i> VELOCIDADE NVL <span class="attr-value" id="stat-spd">1</span></div>
+            <div class="attr-info" onclick="showStatValue('spd')"><i class="fa-solid fa-bolt"></i> VELOCIDADE NÍVEL <span class="attr-value" id="stat-spd">1</span></div>
             <button class="lvl-up-btn" onclick="spendPoint('spd')">+</button>
         </div>
         <div class="attribute-card">
-            <div class="attr-info" onclick="showStatValue('int')"><i class="fa-solid fa-brain"></i> INTELIGÊNCIA NVL <span class="attr-value" id="stat-int">1</span></div>
+            <div class="attr-info" onclick="showStatValue('int')"><i class="fa-solid fa-brain"></i> INTELIGÊNCIA NÍVEL <span class="attr-value" id="stat-int">1</span></div>
             <button class="lvl-up-btn" onclick="spendPoint('int')">+</button>
         </div>
         <div class="attribute-card">
-            <div class="attr-info" onclick="showStatValue('luk')"><i class="fa-solid fa-clover"></i> SORTE NVL <span class="attr-value" id="stat-luk">1</span></div>
+            <div class="attr-info" onclick="showStatValue('luk')"><i class="fa-solid fa-clover"></i> SORTE NÍVEL <span class="attr-value" id="stat-luk">1</span></div>
             <button class="lvl-up-btn" onclick="spendPoint('luk')">+</button>
         </div>
         <div class="attribute-card">
-            <div class="attr-info" onclick="showStatValue('vit')"><i class="fa-solid fa-heart-pulse"></i> VITALIDADE NVL <span class="attr-value" id="stat-vit">1</span></div>
+            <div class="attr-info" onclick="showStatValue('vit')"><i class="fa-solid fa-heart-pulse"></i> VITALIDADE NÍVEL <span class="attr-value" id="stat-vit">1</span></div>
             <button class="lvl-up-btn" onclick="spendPoint('vit')">+</button>
         </div>
         <button class="action-btn btn-open-tree" onclick="openSkillTree()">
@@ -534,7 +534,7 @@
         <div class="log" id="game-log"></div>
         <div class="actions" id="action-buttons">
             <button class="action-btn btn-atk" onclick="playerAction('fisico')">
-                <i class="fa-solid fa-sword"></i> ESPADADA <div class="skill-info" id="val-atk">-</div>
+                <i class="fa-solid fa-sword"></i> ATACAR <div class="skill-info" id="val-atk">-</div>
             </button>
             <button class="action-btn btn-heal" onclick="playerHeal()">
                 <i class="fa-solid fa-hand-holding-medical"></i> CURAR <div class="skill-info" id="val-heal">-</div>
@@ -661,9 +661,9 @@
         }
     }
     const skillList = [
-        { id: 'fogo', name: 'Bola de Fogo', icon: 'fa-fire', mana: 10, color: 'var(--skill-fogo)', desc: 'Lança chamas intensas. 30% chance de QUEIMADURA.' },
-        { id: 'agua', name: 'Tempestade', icon: 'fa-cloud-showers-heavy', mana: 8, color: 'var(--skill-agua)', desc: 'Chuva mística. Chance de dano extra baseado em INT.' },
-        { id: 'terra', name: 'Muralha', icon: 'fa-mountain', mana: 12, color: 'var(--skill-terra)', desc: 'Causa cegueira temporária no alvo.' }
+        { id: 'fogo', name: 'Bola de Fogo', icon: 'fa-fire', mana: 10, color: 'var(--skill-fogo)', desc: 'Lança chamas intensas. Pode causar uma intensa queimadura.' },
+        { id: 'agua', name: 'Tempestade', icon: 'fa-cloud-showers-heavy', mana: 6, color: 'var(--skill-agua)', desc: 'Chuva intensa. Chance de dano extra baseado em INT.' },
+        { id: 'terra', name: 'Tempestade de Areia', icon: 'fa-mountain', mana: 8, color: 'var(--skill-terra)', desc: 'Pode causar cegueira temporária no alvo.' }
     ];
     const monsterTemplates = [
         { name: "Ratazana", minLv: 1, img: "ratazana gigante.png" },
@@ -694,9 +694,9 @@
         p = {
             name: finalName,
             lv: 1,
-            hp: 20, maxHp: 20,
-            mana: 20, maxMana: 20,
-            str: 5, int: 5, luk: 3, spd: 3, vit: 5,
+            hp: 10, maxHp: 10,
+            mana: 10, maxMana: 10,
+            str: 3, int: 3, luk: 1, spd: 1, vit: 3,
             xp: 0, nextXp: 50, furia: 0,
             gold: 0, inventory: [],
             skills: [],
@@ -804,9 +804,9 @@
         const items = {
             potion: { cost: 10, name: "Poção Vida", heal: 15, icon: "fa-flask" },
             mana_potion: { cost: 12, name: "Poção Mana", manaGain: 20, icon: "fa-flask-vial" },
-            boots: { cost: 25, name: "Bota Agilidade", type: "boots", dur: 5, icon: "fa-boot" },
-            shield: { cost: 30, name: "Escudo Prata", type: "shield", dur: 2, icon: "fa-shield-halved" },
-            coin: { cost: 40, name: "Moeda Sorte", type: "coin", dur: 3, icon: "fa-coins" }
+            boots: { cost: 15, name: "Bota Agilidade", type: "boots", dur: 5, icon: "fa-boot" },
+            shield: { cost: 21, name: "Escudo Prata", type: "shield", dur: 2, icon: "fa-shield-halved" },
+            coin: { cost: 33, name: "Moeda Sorte", type: "coin", dur: 3, icon: "fa-coins" }
         };
         const item = items[type];
         if(p.gold >= item.cost && p.inventory.length < 5) {
@@ -864,7 +864,7 @@
             dmg = 5 + (pSkill.level * 2);
             e.hp -= dmg;
             e.blinded = true;
-            await typeLog(`MURALHA LV${pSkill.level}: Inimigo cego e tomou ${dmg} de dano.`, color);
+            await typeLog(`TEMPESTADE DE AREIA LV${pSkill.level}: Inimigo ficou cego e tomou ${dmg} de dano.`, color);
         }
         applyDamageEffect();
         updateUI();
@@ -901,7 +901,7 @@
             document.getElementById('enemy-max-hp').innerText = e.maxHp;
         }
         document.getElementById('val-atk').innerText = `${Math.floor(p.str * 0.8)}-${Math.ceil(p.str * 1.2)} Dano`;
-        document.getElementById('val-heal').innerText = `8 MP | +${Math.floor(p.int * 1.8)}`;
+        document.getElementById('val-heal').innerText = `5 MANA | +${Math.floor(p.int * 1.8)}`;
         document.getElementById('val-rest').innerText = `+${Math.floor(p.int * 0.8)}-${Math.ceil(p.int * 1.4)} MP`;
         for(let i=0; i<3; i++) {
             const slot = document.getElementById(`skill-slot-${i}`);
@@ -943,7 +943,7 @@
         let data = avail[Math.floor(Math.random() * avail.length)];
   
         const hpFactor = 0.8 + Math.random() * 0.4; // 0.8 to 1.2
-        const dmgFactor = 0.7 + Math.random() * 0.4; // 0.7 to 1.1
+        const dmgFactor = 0.6 + Math.random() * 0.3; // 0.7 to 1.1
         let finalHp = Math.round(p.maxHp * hpFactor);
         let finalStr = Math.round(p.str * dmgFactor);
         if (finalHp < 5) finalHp = 5; // mínimo razoável
@@ -951,16 +951,16 @@
         e = { ...data, hp: finalHp, maxHp: finalHp, str: finalStr, blinded: false, burning: false };
         document.getElementById('enemy-img').src = e.img;
         updateUI();
-        await typeLog(`${e.name} apareceu!`, "#f1c40f");
+        await typeLog(`${e.name} está na sua frente!`, "#f1c40f");
         toggleButtons(false);
     }
     function spendPoint(stat) {
         if (p.pendingPoints <= 0) return;
         playSound('heal');
         p.levels[stat]++;
-        p[stat] += 2;
-        if (stat === 'vit') p.maxHp += 8;
-        if (stat === 'int') p.maxMana += 6;
+        p[stat] += 1;
+        if (stat === 'vit') p.maxHp += 4;
+        if (stat === 'int') p.maxMana += 3;
         p.pendingPoints--;
     
         if (p.pendingPoints === 0) {
@@ -972,7 +972,7 @@
             p.mana = p.maxMana;
             updateUI();
             spawnMonster();
-            typeLog("Level up completo! Stats atualizados.", "#ffa502");
+            typeLog("Você se sente renovado! Stats atualizados.", "#ffa502");
         } else {
             updateUI();
         }
@@ -980,11 +980,11 @@
     }
     async function win() {
         playSound('gold');
-        let xpGanha = 25 + (p.lv * 15);
-        let goldGanho = getRandom(8, 15);
+        let xpGanha = 10 + (p.lv * 1);
+        let goldGanho = getRandom(3, 10);
         p.xp += xpGanha;
         p.gold += goldGanho;
-        await typeLog(`VITÓRIA! +${xpGanha} XP | +${goldGanho} Gold`, "#2ecc71");
+        await typeLog(`Este inimigo conheceu a Derrota! +${xpGanha} XP | +${goldGanho} Gold`, "#2ecc71");
   
         if(p.bleeding && Math.random() > 0.4) {
             p.bleeding = false;
@@ -992,7 +992,7 @@
         }
         if(p.xp >= p.nextXp) {
             p.pendingPoints += 3;
-            await typeLog("LEVEL UP! Escolha 3 atributos para melhorar.", "#ffa502");
+            await typeLog("LEVEL UP! Escolha seus atributos para melhorar.", "#ffa502");
         }
         if(p.pendingPoints === 0) spawnMonster();
         else { updateUI(); }
@@ -1012,7 +1012,7 @@
   
         closeAllModals();
         document.getElementById('game-log').innerHTML = "";
-        typeLog("Você desperta em uma taverna, sem ouro, mas com a experiência de sua vida passada...", "#ffa502");
+        typeLog("Você desperta em um local desconhecido, sem ouro, mas com a experiência de sua vida passada...", "#ffa502");
   
         updateUI();
         spawnMonster();
@@ -1028,7 +1028,7 @@
         let finalDmg = baseDmg;
         if (Math.random() < (p.luk * 0.04)) {
             finalDmg *= 2;
-            await typeLog("CRÍTICO!", "#ffa502");
+            await typeLog("ATAQUE CRÍTICO!", "#ffa502");
         }
         e.hp -= finalDmg;
         applyDamageEffect();
@@ -1047,7 +1047,7 @@
             let bleedDmg = Math.ceil(p.maxHp * 0.06);
             p.hp -= bleedDmg;
             playSound('dmg');
-            await typeLog(`Você perde sangue: -${bleedDmg} HP`, "#ff4757");
+            await typeLog(`Você está perdendo sangue: -${bleedDmg} HP`, "#ff4757");
             updateUI();
         }
         if(e.blinded && Math.random() > 0.5) {
@@ -1067,7 +1067,7 @@
             if (dmg > 0) await typeLog(`${e.name} atacou: -${dmg} HP`, "#ff4757");
             if((e.name === "Esqueleto" || e.name === "Vampiro") && Math.random() < 0.3 && !p.bleeding && dmg > 0) {
                 p.bleeding = true;
-                await typeLog("As garras abriram uma ferida! SANGRAMENTO!", "#ff4757");
+                await typeLog("As garras abriram uma ferida!", "#ff4757");
             }
         }
         if(p.hp <= 0) {
@@ -1081,12 +1081,12 @@
         }
     }
     function playerHeal() {
-        if (p.mana < 8) return;
+        if (p.mana < 5) return;
         playSound('heal');
         toggleButtons(true); p.mana -= 8;
         let cura = Math.floor(p.int * 1.8);
         p.hp = Math.min(p.maxHp, p.hp + cura);
-        updateUI(); typeLog(`Curar: +${cura} HP`).then(() => enemyTurn());
+        updateUI(); typeLog(`Você curou: +${cura} de vida`).then(() => enemyTurn());
     }
     function playerDefend() {
         playSound('atk');
@@ -1109,7 +1109,7 @@
         if(p.furia < 100) return;
         playSound('magic');
         toggleButtons(true);
-        let dmg = Math.ceil(p.str * 4);
+        let dmg = Math.ceil(p.str * 2);
         e.hp -= dmg; p.furia = 0;
         updateUI(); typeLog("GOLPE SUPREMO!").then(() => {
             if(e.hp <= 0) win(); else enemyTurn();
